# ordis-api

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
api/: __main__.py  application.py  gunicorn_runner.py  lifetime.py  logging.py
api/database/: utils.py
api/database/crud/: base.py  tracking.py  user_alerts.py
api/database/models/: __init__.py
api/database/models/warframe/: items.py  tracking.py
api/routers/: __init__.py  application.py
api/routers/schemas/: tracking.py  user_alerts.py
api/routers/warframe/: __init__.py  items.py  tracking.py
migrations/: env.py
migrations/versions/: 1700458463-f0ec577b6798_created_base_tables.py  1728821147-d8aef66ad77a_created_base_tables.py
tests/: conftest.py
tests/routers/: test_healthcheck.py
tests/routers/warframe/: test_warframe_items.py  test_warframe_order_tracking.py  utils.py
